--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true">
         </activity>
     </application>
 
